<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".AddIngrActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter ingredients"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:textAlignment="center"
    />


        <EditText
                android:id="@+id/text_add_ingr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

        />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/text_ingredients"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:textSize="20sp"
        />


    </ScrollView>

    <Button
            android:id="@+id/btn_add_ingr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="Add"
    />

    <Button
            android:id="@+id/btn_go_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="Next"
    />


</LinearLayout>