<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

   <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">


       <Button
               android:id="@+id/btn_add"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="10dp"
               android:padding="10dp"
               android:text="Add recipe"
       />

       <Button
               android:id="@+id/btn_show_all"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="10dp"
               android:padding="10dp"
               android:text="Show all recipes"
       />

       <Button
               android:id="@+id/btn_delete_recipe"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="10dp"
               android:padding="10dp"
               android:text="Delete recipe"
       />

       <Button
               android:id="@+id/btn_send_show"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="10dp"
               android:padding="10dp"
               android:text="Send recipe"
       />
   </LinearLayout>

</LinearLayout>